infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec: 
  replicas: 1
  selector:
    # Step 1
    # tell the deployment how to find all the pods
    # that its going to create
    matchLabels:
      app: auth
  template:
    # Step 2
    # How to create each individual pod that this deployment is going to create
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: egorzakharov/auth # the name of the image we buld in the docker
---
# We are using default CluserIP service
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    # We want to find all services with app: auth
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000 # as in the code of the app
      targetPort: 3000
